# tree-sitter-kivy

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.atl/: skill-registry.md
.github/workflows/: ci.yml
bindings/c/: tree-sitter-kivy.h  tree-sitter-kivy.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_kivy/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
openspec/: config.yaml
openspec/changes/2026-07-14-type-checking-removal/: design.md
openspec/changes/canvas-blocks/: design.md  proposal.md
openspec/changes/canvas-instruction/: proposal.md  tasks.md  verify-report.md
openspec/exploration/kvlang-grammar-research/: exploration.md
openspec/exploration/python-injection/: exploration.md
openspec/specs/kvlang-canvas-blocks/: spec.md
openspec/specs/kvlang-core-syntax/: spec.md
openspec/specs/kvlang-directives/: spec.md
openspec/specs/python-injection/: spec.md
openspec/specs/template-rules/: spec.md
openspec/specs/tree-sitter-queries/: spec.md
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: canvas.txt  core-syntax.txt  directives.txt  kitchen-sink.txt  template_rules.txt
test/e2e/: verify.mjs
test/e2e/fixtures/: complex-canvas.kv  simple-app.kv
(+86 files in other folders)
